@startuml

title __QUIZAPP-FX's Class Diagram__\n

  package controllers {
    class App {
    }
  }
  

  package Server {
    class Connection {
    }
  }
  

  package controllers {
    class ErrorController {
    }
  }
  

  package controllers {
    class JavaQuizController {
    }
  }
  

  package controllers {
    class LoginController {
    }
  }
  

  package model {
    class Question {
    }
  }
  

  package model {
    class QuestionLoader {
    }
  }
  

  package Server {
    class Server {
    }
  }
  

  package Server {
    package Server.controllers {
      class ServerController {
      }
    }
  }
  

  package Server {
    class Time {
    }
  }
  

  App -up-|> Application
  Connection -up-|> Closeable
  ErrorController -up-|> Initializable
  JavaQuizController -up-|> Initializable
  JavaQuizController o-- LoginController : loginController
  JavaQuizController o-- Connection : connection
  Server -up-|> Application
  ServerController -up-|> Initializable
  ServerController -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
